# user-service

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/user/: dependencies.py  router.py
app/api/v1/wallet/: dependencies.py  router.py
app/core/: db_helper.py
app/core/models/: __init__.py  user.py
app/database/: __init__.py  db_helper.py
app/database/models/: __init__.py  base.py  user.py  wallet.py
app/database/schemas/: user.py  wallet.py
app/repositories/: __init__.py  user.py  wallet.py
app/services/: __init__.py  user.py  wallet.py
